--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -32,6 +33,10 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
+    dataBinding {
+        enabled = true
+    }
+
     viewBinding {
         enabled = true
     }
@@ -56,4 +61,14 @@ dependencies {
 
     // Material Design
     implementation 'com.google.android.material:material:1.1.0'
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+
+    // Life Cycle - ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    // Life Cycle - Annotation Processor
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 }
