--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.nav_version = '2.2.2'
+    ext.lifecycle_version = '2.2.0'
     repositories {
         google()
         jcenter()
